# sfm_uncertainty

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
output/: validation.csv
scripts/: gcp_umeyama.py  lidar_validation.py  plot_validation.py  synthetic_validation.py
src/: ba_ceres.cpp  camera_intrinsics.h  main.cpp
src/zeisl/: README.md
src/zeisl/bundle adjustment/: covarianceEstimator.py  sfm_IO.py
src/zeisl/covEstimate/: CMakeLists.txt
src/zeisl/covEstimate/bundle_adjustment/: argEvaluator.h  dataIO.cpp
src/zeisl/covEstimate/covEstimate/src/: covEstimator.cpp  covEstimator.h  fileIO.cpp  main.cpp  tets.cpp
src/zeisl/covEstimate/include/: covArgEvaluator.h  definitions.h  fileIO.h
synthetic_eval/output/: reconstruction.csv  validation.csv
